Set up the Test enviroment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<!-- Yasindu Janapriya/ w2120334/ 20231866 -->
 
 <head>
   <meta charset="UTF-8" />
@@ -13,7 +14,7 @@
         frame-src https://*.google.com https://*.googleusercontent.com;
         connect-src 'self';
       " />
-  <title>test-easta</title>
+  <title>Estate Agent App</title> <!-- Title of the web page -->
 </head>
 
 <body>
